# botcast

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Justfile  compose.yaml  package-lock.json  package.json  text.http  tsconfig.json  uno.config.ts  vite.config.ts
.claude/commands/: exec-issue.md
.github/: pull_request_template.md
.github/workflows/: deploy.yml  docs.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  (+5 more)
api/: .gitignore  Justfile  deno.json
botcast-api/: package-lock.json  package.json  schema.prisma
botcast-frontend/: index.html  package-lock.json
botcast-script/: .gitignore
botcast-voicebox/: .gitignore  test.ts
botcast-worker/: Cargo.toml  Justfile  README.md  compose-dev.yaml  schema.sql
botcast-worker/crates/api/: Cargo.toml
botcast-worker/crates/api/src/: main.rs
botcast-worker/crates/api/src/controller/: auth.rs  corners.rs  episodes.rs  mails.rs  mod.rs  podcasts.rs  scripts.rs  secrets.rs  tasks.rs
doc/: _config.ts  deno.json  spec.yml
src/: App.tsx  FeedRepository.ts  FeedService.ts  ScriptRepository.ts  ScriptService.ts  TaskService.ts  config.ts  deno.d.ts  deps.ts  index.ts  main.tsx  model.ts  routeTree.gen.ts  routes.ts  rss.ts  supabase.ts  trpc.ts  voicevox.ts  whisper.ts
test/: dict.ts  script.ts
web/: biome.json  components.json  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts
worker/: Cargo.toml  compose.yaml
worker/src/: main.rs  scrape.rs  synthesis.rs  task.rs  voicevox.rs  voicevox_client.rs
worker/src/scrape/: mod.rs  narou.rs
worker/src/script/: mod.rs
worker/src/synthesizer/: mod.rs  voicevox.rs
(+352 files in other folders)
