[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
surrealdb = { version = "1.5.4", features = ["kv-mem"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
