[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "query"] }
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
openapi = { path = "../openapi_gen" }
repos = { path = "../repos" }
supabase-auth = "0.10.12"
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = "0.4.38"
serde_json = "1.0.125"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
